--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{f0bf5e6e-a985-43be-90f7-2f4be231e1f5}</ProjectGuid>
     <RootNamespace>Project1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Learning C++</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
